Refactoring with stats builder and dataset query